--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "App.js",
   "scripts": {
-    "start": "webpack-dev-server",
+    "start": "concurrently \"webpack-dev-server\" \"cd server && python main.py\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Zachary Inserra",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.24.0",
+    "concurrently": "^7.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1"
@@ -24,6 +25,8 @@
     "css-loader": "^6.5.1",
     "dotenv-webpack": "^7.0.3",
     "path": "^0.12.7",
+    "sass": "^1.49.0",
+    "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.66.0",
     "webpack-cli": "^4.9.1",
