--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "author": "Zachary Inserra",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "axios": "^0.24.0",
     "concurrently": "^7.0.0",
     "react": "^17.0.2",
