--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "concurrently": "^7.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.1"
+    "react-router-dom": "^6.2.1",
+    "tmi.js": "^1.8.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.16.8",
